# Javis-DB-Agent

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW_v2.5.md  CHANGELOG.md  Complete_Test_Report.md  DEPLOYMENT.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  MCP_SECURITY_TEST_PREPARATION.md  MEMORY.md  Makefile  P1_STATUS.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  TEST_REPORT_FULL.md  USER.md  docker-compose.mysql.yml  docker-compose.yml  fix-approval-regression-20260331.md  heartbeat-state.json  install.sh  javis-agent.service  pyproject.toml  requirements.txt
.openclaw/: workspace-state.json
configs/: config.yaml  prompts.yaml  tools.yaml
data/: approvals.jsonl  audit.db  auth_secret.key  auth_secret.key.bak  intent_examples.json  knowledge.db  managed_db.db  tokens.bak  tokens.json  users.bak  users.json  zcloud_agent.db
docs/: BETA_RELEASE_CHECKLIST.md  Javis-DB-Agent-V2.3-全量功能使用说明书.md  Javis-DB-Agent-商用路线图.md  Round4_Preparation.md  Round4_WuTong_Tasks.md  Round4_ZhenXian_Tasks.md  V2.3-Installation-Deploy-Manual.md  V2.3-Product-User-Manual.md  V2.5-迭代计划.md  V2.6-Planning.md  V2.6-R1-R2-Assessment.md  V2.6.1-V2.7-Planning.md  V2.6.1-评估报告.md  V2.7-Assessment.md  V3.0-DEPLOYMENT-GUIDE.md  V3.0-FAQ.md  V3.0-PRODUCT-SPECIFICATION.md  V3.0-USER-GUIDE.md  approval-api.md  architecture.md  javis-api-research.md  javis-auth-design.md  javis-features-v20260329.md  mysql-compatibility.md  requirements.md  round11-architecture-evaluation.md  round2-architecture.md  round2-execution-plan.md  round3-architecture.md  round3-execution-report.md  round4-performance-report.md  round9-execution-report.md  sop-yaml-format.md  tech-spec.md  v1.1-db-enhancement-plan.md  v1.2功能说明.md  v1.2架构说明.md  v1.2迭代计划.md  v1.2需求说明.md  v2.0-requirements.md  (+10 more)
knowledge/: alert_rules.yaml
memory/: 2026-04-12-authorization.md  2026-04-12-mission.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  heartbeat-state.json  v2.2-planning.md  zcloud-bot-test-report-20260416-collab.md  鸣商-任务-AI代码审查SaaS交付测试-20260417.md
mock_javis_api/: __init__.py  models.py  models_enhanced.py  server.py
mock_postgres_api/: main.py  requirements.txt
mock_zcloud_api/: __init__.py  models.py  models_enhanced.py  server.py
scripts/: deploy.sh  fault_injection.py  fault_injection_report.md  init_db.py  load_knowledge.py  verify_ollama.py  (+5 more)
(+485 files in other folders)
